--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4047,6 +4047,10 @@ h3 {
   border-radius: 10px;
   -webkit-box-shadow: 3px 5px 25px 0 rgb(0 0 0 / 10%);
   box-shadow: 3px 5px 25px 0 rgb(0 0 0 / 10%);
+  border-bottom: 5px solid red;
+  border-left: 2px solid red;
+  border-right: 2px solid red;
+
 }
 
 
@@ -4070,6 +4074,7 @@ h3 {
 .mycard:hover {
   -webkit-box-shadow: 3px 5px 25px 0 rgba(249, 63, 91, 0.271);
   box-shadow: 3px 5px 25px 0 rgba(254, 1, 1, 0.264);
+  box-shadow: 1px 1px 10px 3px #d43535a8;
 }
 
 .card_img {
