--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -5,6 +5,7 @@ $red-color : #ff440a;
 $primary-color: #16056b;
 $body-color: #ffffff;
 $heading-color: #ffffff;
+
 // Switch css
 .switch-box {
     position: fixed;
@@ -24,6 +25,7 @@ $heading-color: #ffffff;
             height: 0;
         }
     }
+
     .slider {
         position: absolute;
         cursor: pointer;
@@ -46,64 +48,84 @@ $heading-color: #ffffff;
             margin: auto 0;
             transition: 0.4s;
             box-shadow: 0 0px 15px #2020203d;
-            background: url(../../assets/img/night.png);
+            background: url(../..assets/img/night.png);
             background-repeat: no-repeat;
             background-position: center;
         }
     }
-    input:checked + .slider {
+
+    input:checked+.slider {
         background-color: #cbc1c1;
     }
-    input:focus + .slider {
+
+    input:focus+.slider {
         background-color: #4d4949;
     }
-    input:checked + .slider:before {
+
+    input:checked+.slider:before {
         transform: translateX(24px);
-        background: url(../../assets/img/sunny.png);
+        background: url(../..assets/img/sunny.png);
         background-repeat: no-repeat;
         background-position: center;
     }
+
     .slider {
         &.round {
             border-radius: 50px;
 
             &:before {
                 border-radius: 50%;
-            } 
+            }
         }
     }
 }
+
 // Dark Style CSS
 .theme-dark {
     body {
         background-color: #000000;
         color: #f1f1f1;
     }
+
     p {
         color: #f1f1f1 !important;
-        
+
         a {
             color: #f1f1f1 !important;
 
             &:hover {
-                color: $primary-color !important;
+                color: $primary-color  !important;
             }
         }
     }
+
     a {
         color: $body-color;
     }
-    .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-        color: $heading-color !important;
+
+    .h1,
+    .h2,
+    .h3,
+    .h4,
+    .h5,
+    .h6,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: $heading-color  !important;
+
         a {
-            color: $heading-color !important;
+            color: $heading-color  !important;
 
             &:hover {
-                color: $primary-color !important;
+                color: $primary-color  !important;
             }
         }
     }
-    
+
     //Top Header
     .header-area {
         background: #222121;
@@ -115,105 +137,137 @@ $heading-color: #ffffff;
             .white-logo {
                 display: block;
             }
+
             .main-logo {
                 display: none;
             }
         }
+
         &.is-sticky {
             background-color: #000000;
         }
     }
+
     .main-nav {
         background-color: #000000;
+
         .navbar {
             .navbar-nav {
                 .nav-item {
                     a {
                         color: $body-color;
 
-                        &:hover, &:focus, &.active {
+                        &:hover,
+                        &:focus,
+                        &.active {
                             color: $red-color;
                         }
                     }
-                    &:hover, &:focus, &.active {
+
+                    &:hover,
+                    &:focus,
+                    &.active {
                         a {
                             color: $red-color;
                         }
                     }
+
                     .dropdown-menu {
                         background: #0e0e0e;
+
                         .nav-item {
                             a {
                                 color: $body-color;
                             }
                         }
-                        
+
                         li {
                             a {
                                 color: $body-color;
                                 border-bottom: 1px dashed #000000;
-                                
-                                &:hover, &:focus, &.active {
+
+                                &:hover,
+                                &:focus,
+                                &.active {
                                     color: $red-color;
                                 }
                             }
+
                             .dropdown-menu {
                                 li {
                                     a {
                                         color: $body-color;
                                         border-bottom: 1px dashed #000000;
 
-                                        &:hover, &:focus, &.active {
+                                        &:hover,
+                                        &:focus,
+                                        &.active {
                                             color: $red-color;
                                         }
                                     }
+
                                     .dropdown-menu {
                                         li {
                                             a {
                                                 color: $body-color;
 
-                                                &:hover, &:focus, &.active {
+                                                &:hover,
+                                                &:focus,
+                                                &.active {
                                                     color: $red-color;
                                                 }
                                             }
+
                                             .dropdown-menu {
                                                 li {
                                                     a {
                                                         color: $body-color;
-                                                        
-                                                        &:hover, &:focus, &.active {
+
+                                                        &:hover,
+                                                        &:focus,
+                                                        &.active {
                                                             color: $red-color;
                                                         }
                                                     }
+
                                                     .dropdown-menu {
                                                         li {
                                                             a {
                                                                 color: $body-color;
-                                                                
-                                                                &:hover, &:focus, &.active {
+
+                                                                &:hover,
+                                                                &:focus,
+                                                                &.active {
                                                                     color: $red-color;
                                                                 }
                                                             }
+
                                                             .dropdown-menu {
                                                                 li {
                                                                     a {
                                                                         color: $body-color;
-                                                                        
-                                                                        &:hover, &:focus, &.active {
+
+                                                                        &:hover,
+                                                                        &:focus,
+                                                                        &.active {
                                                                             color: $red-color;
                                                                         }
                                                                     }
+
                                                                     .dropdown-menu {
                                                                         li {
                                                                             a {
                                                                                 color: $body-color;
 
-                                                                                &:hover, &:focus, &.active {
+                                                                                &:hover,
+                                                                                &:focus,
+                                                                                &.active {
                                                                                     color: $red-color;
                                                                                 }
                                                                             }
                                                                         }
                                                                     }
+
                                                                     &.active {
                                                                         a {
                                                                             color: $red-color;
@@ -221,6 +275,7 @@ $heading-color: #ffffff;
                                                                     }
                                                                 }
                                                             }
+
                                                             &.active {
                                                                 a {
                                                                     color: $red-color;
@@ -228,6 +283,7 @@ $heading-color: #ffffff;
                                                             }
                                                         }
                                                     }
+
                                                     &.active {
                                                         a {
                                                             color: $red-color;
@@ -235,6 +291,7 @@ $heading-color: #ffffff;
                                                     }
                                                 }
                                             }
+
                                             &.active {
                                                 a {
                                                     color: $red-color;
@@ -242,6 +299,7 @@ $heading-color: #ffffff;
                                             }
                                         }
                                     }
+
                                     &.active {
                                         a {
                                             color: $red-color;
@@ -249,6 +307,7 @@ $heading-color: #ffffff;
                                     }
                                 }
                             }
+
                             &.active {
                                 a {
                                     color: $red-color;
@@ -258,22 +317,27 @@ $heading-color: #ffffff;
                     }
                 }
             }
+
             .others-options {
                 ul {
                     li {
                         .sign-in {
                             color: $body-color;
                         }
+
                         .cart-icon {
                             i {
                                 color: $body-color;
+
                                 &:hover {
                                     color: $red-color;
                                 }
                             }
                         }
+
                         .search-btn {
                             color: $body-color;
+
                             &:hover {
                                 color: $red-color;
                             }
@@ -292,9 +356,11 @@ $heading-color: #ffffff;
             }
         }
     }
+
     .banner-style-three {
         background: #171617;
     }
+
     //Page Title
     .page-title {
         &::before {
@@ -309,6 +375,7 @@ $heading-color: #ffffff;
                 .nav-item {
                     .nav-link {
                         color: $body-color;
+
                         &.active {
                             color: $red-color;
                             background-color: transparent;
@@ -334,11 +401,13 @@ $heading-color: #ffffff;
             }
         }
     }
+
     .transport-style-five {
         .transport-card {
             background-color: #0e0e0e;
         }
     }
+
     .service-details-area {
         .service-sidebar {
             .sidebar-widget {
@@ -351,6 +420,7 @@ $heading-color: #ffffff;
                 }
             }
         }
+
         .service-post-area {
             ul {
                 li {
@@ -364,25 +434,30 @@ $heading-color: #ffffff;
     .why-choose-section {
         .why-choose-text {
             background: #0e0e0e;
+
             .accordions {
                 .accordion-item {
                     .accordion-title {
                         background: #000000;
                     }
+
                     .accordion-content {
                         background-color: #111111;
                     }
                 }
             }
         }
+
         .why-choose-img {
             .shipping-text {
                 background: #000000;
+
                 form {
                     .form-group {
                         .form-control {
                             background-color: #0e0e0e;
                             color: $body-color;
+
                             &::placeholder {
                                 color: $body-color;
                             }
@@ -399,24 +474,28 @@ $heading-color: #ffffff;
             background: #0b0a0d;
         }
     }
+
     .get-quote-section {
         .quote-form {
             form {
                 .form-control {
                     background-color: #000000;
                     color: $body-color;
+
                     &::placeholder {
                         color: $body-color;
                     }
                 }
             }
         }
+
         .quote-text {
             .offer-text {
                 span {
                     background: #0e0e0e;
                     border: 5px solid #000000;
                 }
+
                 p {
                     background: #000000;
                 }
@@ -445,6 +524,7 @@ $heading-color: #ffffff;
         .company-slider {
             background: #292929;
         }
+
         &.company-style-two {
             .company-slider {
                 background: transparent;
@@ -460,31 +540,36 @@ $heading-color: #ffffff;
             }
         }
     }
+
     .blog-details-area {
         .blog-sidebar {
             .blog-search {
-               background-color: #0e0e0e;
+                background-color: #0e0e0e;
+
                 form {
                     input {
-                       background: #000000;
-                       color: $body-color;
+                        background: #000000;
+                        color: $body-color;
+
                         &::placeholder {
-                           color: $body-color;
-                        }
-                    }
-                }
-            }
-            .blog-widget {
-                background-color: #0e0e0e;
-                ul {
-                    li {
-                        a{
                             color: $body-color;
                         }
                     }
                 }
             }
-            
+
+            .blog-widget {
+                background-color: #0e0e0e;
+
+                ul {
+                    li {
+                        a {
+                            color: $body-color;
+                        }
+                    }
+                }
+            }
+
         }
     }
 
@@ -492,10 +577,12 @@ $heading-color: #ffffff;
     .newsletter-section {
         .newsletter-area {
             background: #0e0e0e;
+
             .newsletter-form {
                 .form-control {
                     background-color: #000000;
                     color: $body-color;
+
                     &::placeholder {
                         color: $body-color;
                     }
@@ -503,6 +590,7 @@ $heading-color: #ffffff;
             }
         }
     }
+
     .newsletter-style-two {
         background: #242424;
     }
@@ -510,6 +598,7 @@ $heading-color: #ffffff;
     //Footer
     .footer-area {
         background: #1c1c1c;
+
         .copyright-area {
             background: #000000;
         }
@@ -529,18 +618,22 @@ $heading-color: #ffffff;
     //Contact
     .contact-section {
         background: #242424;
+
         .contact-area {
             .form-group {
                 .form-control {
                     background-color: #000000;
                     color: $body-color;
+
                     &::placeholder {
                         color: $body-color;
                     }
                 }
+
                 .message-field {
                     background-color: #000000;
                     color: $body-color;
+
                     &::placeholder {
                         color: $body-color;
                     }
@@ -548,12 +641,15 @@ $heading-color: #ffffff;
             }
         }
     }
+
     .contact-style-two {
         background-color: #000000;
+
         .contact-area {
             background-color: #0e0e0e;
         }
     }
+
     .contact-card-section {
         .contact-card {
             &::before {
@@ -569,13 +665,14 @@ $heading-color: #ffffff;
                 .accordion-title {
                     background: #0e0e0e;
                 }
+
                 .accordion-content {
                     background-color: #292929;
                 }
             }
         }
     }
-    
+
 
     @media only screen and (max-width: 991px) {
         .navbar-area {
@@ -583,6 +680,7 @@ $heading-color: #ffffff;
                 .mean-bar {
                     background-color: #000000;
                 }
+
                 a {
                     &.meanmenu-reveal {
                         span {
@@ -592,11 +690,13 @@ $heading-color: #ffffff;
                 }
             }
         }
+
         .mobile-nav {
             .logo {
                 .main-logo {
                     display: none;
                 }
+
                 .white-logo {
                     display: block;
                 }
