--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1415,6 +1415,7 @@ h3 {
 
 .blog-section .blog-card .blog-text {
   padding: 30px;
+  height: 420px;
 }
 
 .blog-section .blog-card .blog-text h3 {
